--- a/liquidwar6/src/lib/gfx/mod-gl/gl-utils/Makefile.in
+++ b/liquidwar6/src/lib/gfx/mod-gl/gl-utils/Makefile.in
@@ -82,11 +82,10 @@ am_libgl_utils_la_OBJECTS = gl-utils-bitmap.lo gl-utils-bitmaparray.lo \
 	gl-utils-game.lo gl-utils-gradient.lo gl-utils-icon.lo \
 	gl-utils-info.lo gl-utils-joystick.lo gl-utils-light.lo \
 	gl-utils-menucache.lo gl-utils-mode.lo gl-utils-mouse.lo \
-	gl-utils-path.lo gl-utils-pixel.lo gl-utils-rectarray.lo \
-	gl-utils-render.lo gl-utils-resolution.lo \
-	gl-utils-shadedtext.lo gl-utils-smoothers.lo \
-	gl-utils-surface.lo gl-utils-texture.lo gl-utils-texture1x1.lo \
-	gl-utils-timer.lo gl-utils-zones.lo
+	gl-utils-path.lo gl-utils-pixel.lo gl-utils-render.lo \
+	gl-utils-resolution.lo gl-utils-shadedtext.lo \
+	gl-utils-smoothers.lo gl-utils-surface.lo gl-utils-texture.lo \
+	gl-utils-texture1x1.lo gl-utils-timer.lo gl-utils-zones.lo
 libgl_utils_la_OBJECTS = $(am_libgl_utils_la_OBJECTS)
 DEFAULT_INCLUDES = -I.@am__isrc@ -I$(top_builddir)
 depcomp = $(SHELL) $(top_srcdir)/depcomp
@@ -303,7 +302,7 @@ top_srcdir = @top_srcdir@
 AM_CFLAGS = @LW6_CFLAGS@ @SDL_CFLAGS@
 AM_LDFLAGS = @LW6_LDFLAGS@
 noinst_LTLIBRARIES = libgl-utils.la
-libgl_utils_la_SOURCES = gl-utils-bitmap.c gl-utils-bitmaparray.c gl-utils-bitmaphash.c gl-utils-capture.c gl-utils-color.c gl-utils-colorize.c gl-utils-const.c gl-utils-cursor.c gl-utils-data.c gl-utils-debug.c gl-utils-display.c gl-utils-draw.c gl-utils-event.c gl-utils-font.c gl-utils-game.c gl-utils-gradient.c gl-utils-icon.c gl-utils-info.c gl-utils-joystick.c gl-utils-light.c gl-utils-menucache.c gl-utils-mode.c gl-utils-mouse.c gl-utils-path.c gl-utils-pixel.c gl-utils-rectarray.c gl-utils-render.c gl-utils-resolution.c gl-utils-shadedtext.c gl-utils-smoothers.c gl-utils-surface.c gl-utils-texture.c gl-utils-texture1x1.c gl-utils-timer.c gl-utils-zones.c
+libgl_utils_la_SOURCES = gl-utils-bitmap.c gl-utils-bitmaparray.c gl-utils-bitmaphash.c gl-utils-capture.c gl-utils-color.c gl-utils-colorize.c gl-utils-const.c gl-utils-cursor.c gl-utils-data.c gl-utils-debug.c gl-utils-display.c gl-utils-draw.c gl-utils-event.c gl-utils-font.c gl-utils-game.c gl-utils-gradient.c gl-utils-icon.c gl-utils-info.c gl-utils-joystick.c gl-utils-light.c gl-utils-menucache.c gl-utils-mode.c gl-utils-mouse.c gl-utils-path.c gl-utils-pixel.c gl-utils-render.c gl-utils-resolution.c gl-utils-shadedtext.c gl-utils-smoothers.c gl-utils-surface.c gl-utils-texture.c gl-utils-texture1x1.c gl-utils-timer.c gl-utils-zones.c
 EXTRA_DIST = gl-utils.h
 all: all-am
 
@@ -382,7 +381,6 @@ distclean-compile:
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/gl-utils-mouse.Plo@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/gl-utils-path.Plo@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/gl-utils-pixel.Plo@am__quote@
-@AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/gl-utils-rectarray.Plo@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/gl-utils-render.Plo@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/gl-utils-resolution.Plo@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/gl-utils-shadedtext.Plo@am__quote@
