--- a/liquidwar6/po/POTFILES.in
+++ b/liquidwar6/po/POTFILES.in
@@ -246,6 +246,7 @@ src/lib/ldr/ldr-color.c
 src/lib/ldr/ldr-cursortexture.c
 src/lib/ldr/ldr-cursortexturelayer.c
 src/lib/ldr/ldr-dir.c
+src/lib/ldr/ldr-exp.c
 src/lib/ldr/ldr-grease.c
 src/lib/ldr/ldr-hints.c
 src/lib/ldr/ldr-layer.c
@@ -279,6 +280,7 @@ src/lib/map/map-coords.c
 src/lib/map/map-cursortexture.c
 src/lib/map/map-cursortexturelayer.c
 src/lib/map/map-dup.c
+src/lib/map/map-exp.c
 src/lib/map/map-hexa.c
 src/lib/map/map-layer.c
 src/lib/map/map-level.c
