--- a/liquidwar6/config.h.in
+++ b/liquidwar6/config.h.in
@@ -31,6 +31,9 @@
 /* Define to 1 if you have the <errno.h> header file. */
 #undef HAVE_ERRNO_H
 
+/* Define to 1 if you have the <execinfo.h> header file. */
+#undef HAVE_EXECINFO_H
+
 /* Define to 1 if you have the <expat.h> header file. */
 #undef HAVE_EXPAT_H
 
