--- a/liquidwar6/doc/Makefile.in
+++ b/liquidwar6/doc/Makefile.in
@@ -360,7 +360,7 @@ gdoc_TEXINFOS = liquidwar6-gdoc.texi bot-gdoc.texi cfg-gdoc.texi cli-gdoc.texi c
 selfdoc_TEXINFOS = quick-selfdoc.texi doc-selfdoc.texi show-selfdoc.texi path-selfdoc.texi players-selfdoc.texi input-selfdoc.texi graphics-selfdoc.texi sound-selfdoc.texi network-selfdoc.texi map-selfdoc.texi map-rules-selfdoc.texi map-hints-selfdoc.texi map-style-selfdoc.texi map-teams-selfdoc.texi funcs-selfdoc.texi hooks-selfdoc.texi advanced-selfdoc.texi aliases-selfdoc.texi
 liquidwar6_TEXINFOS = gpl.texi fdl.texi version.texi stamp.texi const.texi $(gdoc_TEXINFOS) $(selfdoc_TEXINFOS)
 man6_MANS = liquidwar6.man
-EXTRA_DIST = COPYING gdoc.pl gdoc-update.sh selfdoc.pl selfdoc-update.sh deps.dot deps.png deps.eps
+EXTRA_DIST = COPYING gdoc.pl gdoc-update.sh selfdoc.pl selfdoc-update.sh deps.dot deps.eps mod-gl-layout.xcf
 all: all-recursive
 
 .SUFFIXES:
@@ -453,8 +453,6 @@ clean-libtool:
 	fi
 $(srcdir)/liquidwar6.info: liquidwar6.texi $(srcdir)/version.texi $(liquidwar6_TEXINFOS)
 liquidwar6.dvi: liquidwar6.texi $(srcdir)/version.texi $(liquidwar6_TEXINFOS)
-liquidwar6.pdf: liquidwar6.texi $(srcdir)/version.texi $(liquidwar6_TEXINFOS)
-liquidwar6.html: liquidwar6.texi $(srcdir)/version.texi $(liquidwar6_TEXINFOS)
 $(srcdir)/version.texi:  $(srcdir)/stamp-vti
 $(srcdir)/stamp-vti: liquidwar6.texi $(top_srcdir)/configure
 	@(dir=.; test -f ./liquidwar6.texi || dir=$(srcdir); \
@@ -1020,30 +1018,31 @@ uninstall-man: uninstall-man6
 	uninstall-pdf-am uninstall-ps-am
 
 
-deps.png: deps.dot
-	if which dot && which rsync ; then dot -Tpng -o$@ $< && rsync $@ ${srcdir} ; fi
-
 deps.eps: deps.dot
-	if which dot && which rsync ; then dot -Teps -o$@ $< && rsync $@ ${srcdir} ; fi
+	if which dot ; then dot -Kdot -Teps -o$@ $< ; fi ; if which rsync ; then rsync $@ ${srcdir} ; fi
 
-images: deps.png deps.eps
-	true
+deps.png: deps.dot
+	if which dot ; then dot -Kdot -Tpng -o$@ $< ; fi
 
-clean-images:
-	rm -f deps.png deps.eps
+deps.pdf: deps.dot
+	if which dot ; then dot -Kdot -Tpdf -o$@ $< ; fi
 
 # To generate const.texi we need to first generate const.texi.in
 # in builddir then copy it to srcdir for using a texi file located
 # in builddir causes an error when running make distcheck
 # (complains about write permissions, can't create temp dir).
-all-local: images
+all-local: deps.eps
 	if ! diff ${builddir}/const.texi.in ${srcdir}/const.texi ; then cp ${builddir}/const.texi.in ${srcdir}/const.texi ; fi
 
-html-local: deps.png
-	if test -d ${builddir}/liquidwar6.html ; then cp -f ${srcdir}/*.png ${builddir}/liquidwar6.html/ ; fi
+html-local:
+	if test -d ${builddir}/liquidwar6.html ; then cp -f ${builddir}/*.png ${builddir}/liquidwar6.html/ ; fi
 
-clean-local: clean-images
-	true
+liquidwar6.html: deps.png
+
+liquidwar6.pdf: deps.pdf
+
+clean-local:
+	rm -f deps.png deps.pdf
 
 install-data-local:
 	if test -d liquidwar6.html ; then install -d $(DESTDIR)$(docdir)/html ; cp -f liquidwar6.html/* $(DESTDIR)$(docdir)/html/ ; fi
