--- a/liquidwar6/doc/Makefile.in
+++ b/liquidwar6/doc/Makefile.in
@@ -360,7 +360,7 @@ gdoc_TEXINFOS = liquidwar6-gdoc.texi bot-gdoc.texi cfg-gdoc.texi cli-gdoc.texi c
 selfdoc_TEXINFOS = quick-selfdoc.texi doc-selfdoc.texi show-selfdoc.texi path-selfdoc.texi players-selfdoc.texi input-selfdoc.texi graphics-selfdoc.texi sound-selfdoc.texi network-selfdoc.texi map-selfdoc.texi map-rules-selfdoc.texi map-hints-selfdoc.texi map-style-selfdoc.texi map-teams-selfdoc.texi funcs-selfdoc.texi hooks-selfdoc.texi advanced-selfdoc.texi aliases-selfdoc.texi
 liquidwar6_TEXINFOS = gpl.texi fdl.texi version.texi stamp.texi const.texi $(gdoc_TEXINFOS) $(selfdoc_TEXINFOS)
 man6_MANS = liquidwar6.man
-EXTRA_DIST = COPYING gdoc.pl gdoc-update.sh selfdoc.pl selfdoc-update.sh deps.dot deps.eps mod-gl-layout.xcf
+EXTRA_DIST = COPYING gdoc.pl gdoc-update.sh selfdoc.pl selfdoc-update.sh deps.dot deps.eps deps.txt mod-gl-layout.xcf mod-gl-layout.ods
 all: all-recursive
 
 .SUFFIXES:
@@ -1021,6 +1021,9 @@ uninstall-man: uninstall-man6
 deps.eps: deps.dot
 	if which dot ; then dot -Kdot -Teps -o$@ $< ; fi ; if which rsync ; then rsync $@ ${srcdir} ; fi
 
+deps.txt: deps.dot
+	if which dot ; then dot -Tcanon -o$@ $< ; fi ; if which rsync ; then rsync $@ ${srcdir} ; fi
+
 deps.png: deps.dot
 	if which dot ; then dot -Kdot -Tpng -o$@ $< ; fi
 
@@ -1031,7 +1034,7 @@ deps.pdf: deps.dot
 # in builddir then copy it to srcdir for using a texi file located
 # in builddir causes an error when running make distcheck
 # (complains about write permissions, can't create temp dir).
-all-local: deps.eps
+all-local: deps.eps deps.txt
 	if ! diff ${builddir}/const.texi.in ${srcdir}/const.texi ; then cp ${builddir}/const.texi.in ${srcdir}/const.texi ; fi
 
 html-local:
