Hacking on level chaining. Doesn't work yet.

--- a/liquidwar6/script/Makefile.am
+++ b/liquidwar6/script/Makefile.am
@@ -55,6 +55,7 @@ menu-player-detail.scm \
 menu-players.scm \
 menu-play.scm \
 menu-root.scm \
+menu-score.scm \
 menu-wait.scm \
 menu.scm \
 mover.scm \
