Level-chaining now works (along with exp gain).

--- a/liquidwar6/script/Makefile.in
+++ b/liquidwar6/script/Makefile.in
@@ -330,6 +330,7 @@ menu-player-detail.scm \
 menu-players.scm \
 menu-play.scm \
 menu-root.scm \
+menu-score.scm \
 menu-wait.scm \
 menu.scm \
 mover.scm \
