--- a/liquidwar6/src/lib/sys/Makefile.in
+++ b/liquidwar6/src/lib/sys/Makefile.in
@@ -85,11 +85,11 @@ am__libsys_la_SOURCES_DIST = sys-arg.c sys-assoc.c sys-backtrace.c \
 	sys-escape.c sys-exec.c sys-file.c sys-global.c sys-profiler.c \
 	sys-hash.c sys-hexa.c sys-history.c sys-i18n.c sys-id.c \
 	sys-keyword.c sys-list.c sys-log.c sys-math.c sys-mem.c \
-	sys-mutex.c sys-nop.c sys-options.c sys-path.c sys-print.c \
-	sys-progress.c sys-random.c sys-sdl.c sys-serial.c sys-shape.c \
-	sys-signal.c sys-sort.c sys-spinlock.c sys-str.c sys-stream.c \
-	sys-test.c sys-thread.c sys-time.c sys-url.c sys-vthread.c \
-	sys-testandsetx86.s sys-macosx.m
+	sys-mutex.c sys-nop.c sys-openmp.c sys-options.c sys-path.c \
+	sys-print.c sys-progress.c sys-random.c sys-sdl.c sys-serial.c \
+	sys-shape.c sys-signal.c sys-sort.c sys-spinlock.c sys-str.c \
+	sys-stream.c sys-test.c sys-thread.c sys-time.c sys-url.c \
+	sys-vthread.c sys-testandsetx86.s sys-macosx.m
 @LW6_X86_TRUE@am__objects_1 = sys-testandsetx86.lo
 @LW6_MAC_OS_X_TRUE@am__objects_2 = sys-macosx.lo
 am_libsys_la_OBJECTS = sys-arg.lo sys-assoc.lo sys-backtrace.lo \
@@ -98,11 +98,11 @@ am_libsys_la_OBJECTS = sys-arg.lo sys-assoc.lo sys-backtrace.lo \
 	sys-env.lo sys-escape.lo sys-exec.lo sys-file.lo sys-global.lo \
 	sys-profiler.lo sys-hash.lo sys-hexa.lo sys-history.lo \
 	sys-i18n.lo sys-id.lo sys-keyword.lo sys-list.lo sys-log.lo \
-	sys-math.lo sys-mem.lo sys-mutex.lo sys-nop.lo sys-options.lo \
-	sys-path.lo sys-print.lo sys-progress.lo sys-random.lo \
-	sys-sdl.lo sys-serial.lo sys-shape.lo sys-signal.lo \
-	sys-sort.lo sys-spinlock.lo sys-str.lo sys-stream.lo \
-	sys-test.lo sys-thread.lo sys-time.lo sys-url.lo \
+	sys-math.lo sys-mem.lo sys-mutex.lo sys-nop.lo sys-openmp.lo \
+	sys-options.lo sys-path.lo sys-print.lo sys-progress.lo \
+	sys-random.lo sys-sdl.lo sys-serial.lo sys-shape.lo \
+	sys-signal.lo sys-sort.lo sys-spinlock.lo sys-str.lo \
+	sys-stream.lo sys-test.lo sys-thread.lo sys-time.lo sys-url.lo \
 	sys-vthread.lo $(am__objects_1) $(am__objects_2)
 libsys_la_OBJECTS = $(am_libsys_la_OBJECTS)
 am__installdirs = "$(DESTDIR)$(libexecdir)" "$(DESTDIR)$(libsysdir)"
@@ -374,7 +374,7 @@ AM_LDFLAGS = @LW6_LDFLAGS@ @LW6_GTK_ENABLE_LDFLAGS@ -lm
 @LW6_MAC_OS_X_FALSE@OBJC_EXTRA_FILES = sys-macosx.m
 @LW6_MAC_OS_X_TRUE@OBJC_EXTRA_FILES = 
 noinst_LTLIBRARIES = libsys.la
-libsys_la_SOURCES = sys-arg.c sys-assoc.c sys-backtrace.c sys-bazooka.c sys-build.c sys-checksum.c sys-color.c sys-convert.c sys-daemon.c sys-debug.c sys-dump.c sys-env.c sys-escape.c sys-exec.c sys-file.c sys-global.c sys-profiler.c sys-hash.c sys-hexa.c sys-history.c sys-i18n.c sys-id.c sys-keyword.c sys-list.c sys-log.c sys-math.c sys-mem.c sys-mutex.c sys-nop.c sys-options.c sys-path.c sys-print.c sys-progress.c sys-random.c sys-sdl.c sys-serial.c sys-shape.c sys-signal.c sys-sort.c sys-spinlock.c sys-str.c sys-stream.c sys-test.c sys-thread.c sys-time.c sys-url.c sys-vthread.c $(X86_SRC_FILES) $(OBJC_SRC_FILES)
+libsys_la_SOURCES = sys-arg.c sys-assoc.c sys-backtrace.c sys-bazooka.c sys-build.c sys-checksum.c sys-color.c sys-convert.c sys-daemon.c sys-debug.c sys-dump.c sys-env.c sys-escape.c sys-exec.c sys-file.c sys-global.c sys-profiler.c sys-hash.c sys-hexa.c sys-history.c sys-i18n.c sys-id.c sys-keyword.c sys-list.c sys-log.c sys-math.c sys-mem.c sys-mutex.c sys-nop.c sys-openmp.c sys-options.c sys-path.c sys-print.c sys-progress.c sys-random.c sys-sdl.c sys-serial.c sys-shape.c sys-signal.c sys-sort.c sys-spinlock.c sys-str.c sys-stream.c sys-test.c sys-thread.c sys-time.c sys-url.c sys-vthread.c $(X86_SRC_FILES) $(OBJC_SRC_FILES)
 libsysdir = $(includedir)/@PACKAGE_TARNAME@/sys
 libsys_HEADERS = sys.h sys-gettext.h
 @FULLSTATIC_FALSE@liquidwar6sys_test_SOURCES = sys-testmain.c
@@ -509,6 +509,7 @@ distclean-compile:
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/sys-mem.Plo@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/sys-mutex.Plo@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/sys-nop.Plo@am__quote@
+@AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/sys-openmp.Plo@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/sys-options.Plo@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/sys-path.Plo@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/sys-print.Plo@am__quote@
