--- a/liquidwar6/config.h.in
+++ b/liquidwar6/config.h.in
@@ -79,6 +79,9 @@
 /* Define to 1 if you have the <libpng14/png.h> header file. */
 #undef HAVE_LIBPNG14_PNG_H
 
+/* Define to 1 if you have the <limits.h> header file. */
+#undef HAVE_LIMITS_H
+
 /* Define to 1 if you have the <lmcons.h> header file. */
 #undef HAVE_LMCONS_H
 
