--- a/liquidwar6/src/lib/gfx/mod-gl/Makefile.in
+++ b/liquidwar6/src/lib/gfx/mod-gl/Makefile.in
@@ -341,7 +341,7 @@ htmldir = @htmldir@
 includedir = @includedir@
 infodir = @infodir@
 install_sh = @install_sh@
-libdir = $(prefix)/lib/@PACKAGE_TARNAME@-@PACKAGE_VERSION@/gfx
+libdir = @libdir@/@PACKAGE_TARNAME@-@PACKAGE_VERSION@/gfx
 libexecdir = @libexecdir@
 localedir = @localedir@
 localstatedir = @localstatedir@
