--- a/liquidwar6/src/lib/bot/mod-idiot/Makefile.am
+++ b/liquidwar6/src/lib/bot/mod-idiot/Makefile.am
@@ -21,7 +21,7 @@
 AM_CFLAGS = @LW6_CFLAGS@
 AM_LDFLAGS = @LW6_LDFLAGS@
 
-libdir = $(prefix)/lib/@PACKAGE_TARNAME@-@PACKAGE_VERSION@/bot
+libdir = @libdir@/@PACKAGE_TARNAME@-@PACKAGE_VERSION@/bot
 
 noinst_LTLIBRARIES = libmod_idiot_s.la
 MOD_IDIOT_FILES = mod-idiot-backend.c mod-idiot-move.c mod-idiot-repr.c mod-idiot-setup.c
