--- a/liquidwar6/src/lib/cli/mod-udp/Makefile.in
+++ b/liquidwar6/src/lib/cli/mod-udp/Makefile.in
@@ -306,7 +306,7 @@ htmldir = @htmldir@
 includedir = @includedir@
 infodir = @infodir@
 install_sh = @install_sh@
-libdir = $(prefix)/lib/@PACKAGE_TARNAME@-@PACKAGE_VERSION@/cli
+libdir = @libdir@/@PACKAGE_TARNAME@-@PACKAGE_VERSION@/cli
 libexecdir = @libexecdir@
 localedir = @localedir@
 localstatedir = @localstatedir@
