--- a/liquidwar6/src/lib/snd/mod-csound/Makefile.in
+++ b/liquidwar6/src/lib/snd/mod-csound/Makefile.in
@@ -304,7 +304,7 @@ htmldir = @htmldir@
 includedir = @includedir@
 infodir = @infodir@
 install_sh = @install_sh@
-libdir = $(prefix)/lib/@PACKAGE_TARNAME@-@PACKAGE_VERSION@/snd
+libdir = @libdir@/@PACKAGE_TARNAME@-@PACKAGE_VERSION@/snd
 libexecdir = @libexecdir@
 localedir = @localedir@
 localstatedir = @localstatedir@
