--- a/liquidwar6/src/lib/srv/mod-httpd/Makefile.in
+++ b/liquidwar6/src/lib/srv/mod-httpd/Makefile.in
@@ -310,7 +310,7 @@ htmldir = @htmldir@
 includedir = @includedir@
 infodir = @infodir@
 install_sh = @install_sh@
-libdir = $(prefix)/lib/@PACKAGE_TARNAME@-@PACKAGE_VERSION@/srv
+libdir = @libdir@/@PACKAGE_TARNAME@-@PACKAGE_VERSION@/srv
 libexecdir = @libexecdir@
 localedir = @localedir@
 localstatedir = @localstatedir@
