--- a/liquidwar6/src/lib/srv/mod-tcpd/Makefile.am
+++ b/liquidwar6/src/lib/srv/mod-tcpd/Makefile.am
@@ -21,7 +21,7 @@
 AM_CFLAGS = @LW6_CFLAGS@
 AM_LDFLAGS = @LW6_LDFLAGS@
 
-libdir = $(prefix)/lib/@PACKAGE_TARNAME@-@PACKAGE_VERSION@/srv
+libdir = @libdir@/@PACKAGE_TARNAME@-@PACKAGE_VERSION@/srv
 
 noinst_LTLIBRARIES = libmod_tcpd_s.la
 MOD_TCPD_FILES = mod-tcpd-backend.c mod-tcpd-data.c mod-tcpd-handshake.c mod-tcpd-info.c mod-tcpd-message.c mod-tcpd-oob.c mod-tcpd-setup.c mod-tcpd-state.c
