Added serial2seq and seq2serial in dat module.

--- a/liquidwar6/pkg/liquidwar6.spec.in
+++ b/liquidwar6/pkg/liquidwar6.spec.in
@@ -1,3 +1,23 @@
+# Liquid War 6 is a unique multiplayer wargame.
+# Copyright (C)  2005, 2006, 2007, 2008, 2009, 2010, 2011  Christian Mauduit <ufoot@ufoot.org>
+#
+# This program is free software; you can redistribute it and/or modify
+# it under the terms of the GNU General Public License as published by
+# the Free Software Foundation, either version 3 of the License, or
+# (at your option) any later version.
+#
+# This program is distributed in the hope that it will be useful,
+# but WITHOUT ANY WARRANTY; without even the implied warranty of
+# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+# GNU General Public License for more details.
+#
+# You should have received a copy of the GNU General Public License
+# along with this program.  If not, see <http://www.gnu.org/licenses/>.
+#
+#
+# Liquid War 6 homepage : http://www.gnu.org/software/liquidwar6/
+# Contact author        : ufoot@ufoot.org
+
 %define name @PACKAGE_TARNAME@
 %define version @PACKAGE_VERSION@
 %define release 1vendor
@@ -18,7 +38,7 @@ Summary(de): Ein einzigartiges Kriegspiel für mehrere Spieler.
 Name: %{name}
 Version: %{version}
 Release: %{release}
-License: GPL
+License: GPLv3+
 Group: Amusements/Games
 Source: http://download.savannah.gnu.org/releases/liquidwar6/%{version}/%{name}-%{version}.tar.gz
 URL: http://www.gnu.org/software/liquidwar6
@@ -157,6 +177,9 @@ if which install-info && test -d %{_prefix}/info && test -f %{_prefix}/info/dir;
 %{_prefix}/share/doc/@PACKAGE_TARNAME@-@PACKAGE_VERSION@/*
 
 %changelog
+
+* Fri Oct 28 2011 Christian Mauduit <ufoot@ufoot.org>
+- Fixed license and explicitly set it to GPLv3+ instead of GPL.
 
 * Tue Oct 04 2011 Christian Mauduit <ufoot@ufoot.org>
 - Fixed LC_MESSAGES handling (French only was handled)
