--- a/liquidwar6/map/five-points/Makefile.in
+++ b/liquidwar6/map/five-points/Makefile.in
@@ -293,7 +293,7 @@ target_vendor = @target_vendor@
 top_build_prefix = @top_build_prefix@
 top_builddir = @top_builddir@
 top_srcdir = @top_srcdir@
-pkgdata_DATA = README hints.xml layer2.png layer3.png map.png rules.xml style.xml texture.jpeg
+pkgdata_DATA = README hints.xml layer2.png layer3.png map.png rules.xml style.xml teams.xml texture.jpeg
 EXTRA_DIST = $(pkgdata_DATA)
 all: all-am
 
